Adding ValueObjects and Starting Adding tests